...
                      ),
                    )
                  ],
                ),
              ),
              IconButton(
                key: const Key('account_button'),
                onPressed: () {
                  Navigator.of(context).pushNamed(accountScreenRoute);
                },
                icon: Column(
                  mainAxisSize: MainAxisSize.min,
                  children: [
...
                blurRadius: 4,
                offset: const Offset(0, 2),
              ),
            ],
          ),
          child: IconButton(
            key: const Key('add_drink_button'),
            iconSize: 64,
            onPressed: () async {
              showDialog<DrinkModel>(
                context: context,
                builder: (context) => const DrinkDialog()
              ).then((drink) {
...
